[package]
name = "rustlillebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.35.0"
shuttle-runtime = "0.35.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-secrets = "0.35.0"
tokio = "1.26.0"
tracing = "0.1.37"
